add proper XsuaaHybridAuthorizationsProviderTest